OO-3296: don't upgrade manager roles if administrator and decouple every role, remove double update roles method...